--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,7 @@ e2e/*.map
 .DS_Store/
 
 ### VisualStudioCode ###
-.vscode/*
+.vscode
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
