--- a/.gitignore
+++ b/.gitignore
@@ -53,4 +53,6 @@ e2e/*.map
 .history
 .ionide
 
+1_flightTicket
+
 # End of https://www.toptal.com/developers/gitignore/api/angular,visualstudiocode
